Remove DOM resizing on iOS (not worth it) and fix emit warnings

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -34,10 +34,6 @@
     overflow: auto;
 }
 
-.body.keyboard-visible {
-    max-height: 35svh;
-}
-
 .footer {
     grid-area: footer;
 }
